# diploma

./: README.md  bifurcation.py  cardano.py  data.py  get_system.py  main.py  phase_portrait.py  pyproject.toml  utils.py
classes/: object.py  system.py
results/: cardano.txt  general.txt  mouse.txt  patient_1.txt  patient_2.txt
